--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Todo List</h1>
+        <h1>My To Do List</h1>
         <input type="text" id="task" placeholder="Add a new task">
         <button onclick="addTask()">Add</button>
         <ul id="taskList"></ul>
